--- a/index.html
+++ b/index.html
@@ -1,1 +1,101 @@
+<html lang="en"><head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Developer | Landing Page</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
 
+<body>
+
+
+  <section class="hero_section">
+    <div class="text_hero">
+      <h2><span>Hi,</span> I am Akash Lahane</h2>
+      <h1>FULL STACK DEVELOPER</h1>
+    </div>
+  </section>
+
+
+  <section class="black_box">
+    <h2>WORK, I CAN DO FOR <span>YOU</span></h2>
+  </section>
+
+
+
+  <section class="grid_parent">
+    <div class="grid_item">
+
+      <div class="card">
+        <div class="image">
+          <img src="img/web_uiux.png" alt="web_development">
+        </div>
+        <div class="card_text">
+          <h3>Web Development</h3>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione
+            quibusdam ex quaerat quasi nostrum tempore.
+          </p>
+        </div>
+
+      </div>
+    </div>
+
+
+    <div class="grid_item">
+      <div class="card">
+        <div class="image">
+          <img src="img/app.png" alt="app_development">
+        </div>
+        <div class="card_text">
+          <h3>App Development</h3>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione
+            quibusdam ex quaerat quasi nostrum tempore.
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <div class="grid_item">
+      <div class="card">
+        <div class="image">
+          <img src="img/web_uiux.png" alt="web_development">
+        </div>
+        <div class="card_text">
+          <h3>UI UX Design</h3>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione
+            quibusdam ex quaerat quasi nostrum tempore.
+          </p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="bottom_section">
+    <div class="contact_me">
+      <h1>Contact Me</h1>
+      <p>
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nisi dolor,
+        esse quasi doloremque temporibus quis.
+      </p>
+      <p>akashlahane10010@gmail.com</p>
+    </div>
+
+    <div class="about_me">
+      <h1>About Me</h1>
+      <p>
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nisi dolor,
+        esse quasi doloremque temporibus quis.
+      </p>
+      <p>
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nisi dolor,
+        esse quasi doloremque temporibus quis.
+      </p>
+    </div>
+  </section>
+
+
+
+</body></html>
