--- a/index.html
+++ b/index.html
@@ -33,8 +33,7 @@
         <div class="card_text">
           <h3>Web Development</h3>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione
-            quibusdam ex quaerat quasi nostrum tempore.
+            I can develop websites that are both functional and aesthetically pleasing.
           </p>
         </div>
 
@@ -50,8 +49,7 @@
         <div class="card_text">
           <h3>App Development</h3>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione
-            quibusdam ex quaerat quasi nostrum tempore.
+            I can develop applications that are both functional and aesthetically pleasing.
           </p>
         </div>
       </div>
@@ -65,8 +63,7 @@
         <div class="card_text">
           <h3>UI UX Design</h3>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione
-            quibusdam ex quaerat quasi nostrum tempore.
+            I can create the user interface for an app, website, or other interactive media.
           </p>
         </div>
       </div>
@@ -76,23 +73,16 @@
   <section class="bottom_section">
     <div class="contact_me">
       <h1>Contact Me</h1>
-      <p>
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nisi dolor,
-        esse quasi doloremque temporibus quis.
-      </p>
-      <p>akashlahane10010@gmail.com</p>
+      <p>Contact number: +919834944562 </p>
+      <p>Email ID: akashlahane10010@gmail.com</p>
     </div>
 
     <div class="about_me">
       <h1>About Me</h1>
       <p>
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nisi dolor,
-        esse quasi doloremque temporibus quis.
+         I'm a full stack web developer. With my  expertise in HTML, CSS, JavaScript,and database technologies, I can develop powerful, high-performance websites and applications.
       </p>
-      <p>
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nisi dolor,
-        esse quasi doloremque temporibus quis.
-      </p>
+      
     </div>
   </section>
 
