--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 
         <div class="box-container">
             <div class="box">
-                <a href="https://akashlahane.github.io/My-Dictionary---Javascript-Project---ay333jj3tofv/" target="_blank"><img src="/imgs/dict.avif" alt=""></a>
+                <a href="https://akashlahane.github.io/My-Dictionary---Javascript-Project---ay333jj3tofv/" target="_blank"><img src="/imgs/adict.png" alt=""></a>
             </div>
            
         </div>
