--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                <ul>
                   <li><a href="#home">Home</a></li>
                   <li><a href="#about">About</a></li>
-                  <li><a  href="#education">Education</a></li>
+                  <li><a href="#education">Education</a></li>
                   <li><a href="#portfolio">Portfolio</a></li>
                   <li><a href="#contact">Contact</a></li>
                </ul>
@@ -143,7 +143,7 @@
 
         <div class="box-container">
             <div class="box">
-                <a href="https://akashlahane.github.io/My-Dictionary---Javascript-Project---ay333jj3tofv/" target="_blank"><img src="/imgs/dict4.jpg" alt=""></a>
+                <a href="https://akashlahane.github.io/My-Dictionary---Javascript-Project---ay333jj3tofv/" target="_blank"><img src="./dict2.jpg" alt=""></a>
             </div>
            
         </div>
